--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <h1>USMAN MUNIR</h1>
+            <h1 style="height: 30px;">USMAN MUNIR</h1>
         </div>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Testimonials</a></li>
-            <li><a href="#">Contact</a></li>
+            <li class="no1"><a href="#">Home</a></li>
+            <li class="no2"><a href="#">About Me</a></li>
+            <li class="no3"><a href="#">Services</a></li>
+            <li class="no4"><a href="#">Projects</a></li>
+            <li class="no5"><a href="#">Testimonials</a></li>
+            <li class="no6"><a href="#">Contact</a></li>
             <button class="CV"><a href="#"></a>Download CV</button>
         </ul>
     </nav>
     <div class="content">
         <div>
             <p>HI I am</p>
-            <p style="color: chocolate;">USMAN MUNIR</p>
+            <p style="color: #ffa500;;">USMAN MUNIR</p>
             <h1 class="web">Web <br>
                 developer
             </h1>
@@ -34,17 +34,17 @@
             <button class="hire"><a href="#"></a>Hire me</button>
         </div>
         <div class="profile">
-            <img src="images/profile pic.jpg" alt="" width: 350px; height= 400px >
+            <img src="images/profile.pic.jpg" alt="" width: 500px; height= 375px >
             <div class="social">
-                <a href="https://www.instagram.com/usman_munir06?igsh=MWlscjZmam8wbDdrMg==" target="_blank"><img src="images/instagram (1).png" alt="" ></a>
+                <a href="https://www.instagram.com/usman_munir06?igsh=MWlscjZmam8wbDdrMg==" target="_blank"><img src="images/instagram.png" alt="" ></a>
                 <a href="https://www.linkedin.com/in/usman-munir-81b2a232b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><img src="images/linkedin.png" alt="" ></a>
-                <a href="https://www.facebook.com/share/1CEfS8nzC9/" target="_blank"><img src="images/facebook (1).png" alt=""></a>
+                <a href="https://www.facebook.com/share/1CEfS8nzC9/" target="_blank"><img src="images/facebook.png" alt=""></a>
             </div>
         </div>
     </div>
     <div class="secondpart">
         <div class="pic1">
-            <img src="images/profile pic.jpg" alt="">
+            <img src="images/profile.pic.jpg" alt="">
         </div>
         <div class="detail">
             <h2 class="about-me">About me</h2>
@@ -61,28 +61,28 @@
         Contact me to discuss your project needs and how I can help you achieve your goals. <br>My work is to build a user-friendly and effcient websites applications that meet the needs of clients and users alike</p>
     </div>
     <div class="container">
-        <div class="box">
+        <div class="box1">
             <div class="icon">🖥️</div>
             <div class="title">Web Design</div>
             <div class="desc">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eos odio quasi cum cumque! Dolore nostrum et cum.
             </div>
         </div>
-        <div class="box">
+        <div class="box2">
             <div class="icon">📱</div>
             <div class="title">App Design</div>
             <div class="desc">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eos odio quasi cum cumque! Dolore nostrum et cum.
             </div>
         </div>
-        <div class="box">
+        <div class="box3">
             <div class="icon">🎨</div>
             <div class="title">Graphic Design</div>
             <div class="desc">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eos odio quasi cum cumque! Dolore nostrum et cum.
             </div>
         </div>
-        <div class="box">
+        <div class="box4">
             <div class="icon">🧑‍💻</div>
             <div class="title">UX</div>
             <div class="desc">
@@ -93,15 +93,17 @@
     <div class="project">
             <h5 class="roll">My Projects</h5>
             <p>Lorem ipsum dolor sit, amet  consectetur adipisicing elit.  Magnam, incidunt  eligendi iure mollitia cumque <br> consectetur amet distinctio ratione, nam ab, fugit eum ipsum. Nulla eum nam maxime, nihil consectetur facilis?</p>
-            <button class="all"><a href="#"></a>All</button>
-            <button class="me"><a href="#"></a>UI/UX</button>
-            <button class="you"><a href="#"></a>Web Design</button>
-            <button class="they"><a href="#"></a>App Design</button>
-            <button class="them"><a href="#"></a>Graphic Design</button>
+            <div class="you">
+                <button ><a href="#"></a>All</button>
+                <button ><a href="#"></a>UI/UX</button>
+                <button ><a href="#"></a>Web Design</button>
+                <button ><a href="#"></a>App Design</button>
+                <button ><a href="#"></a>Graphic Design</button>
+            </div>
         <div class="web-image">
-            <img src="images/web page 1.jpg" alt="">
-            <img src="images/web page 2.jpg" alt="">
-            <img src="images/web page 3.jpg" alt="">
+            <img class="web1" src="images/web page 1.jpg" alt="">
+            <img class="web2" src="images/web page 2.jpg" alt="">
+            <img class="web3" src="images/web page 3.jpg" alt="">
         </div>
     </div>
     <div class="lastpart">
@@ -111,22 +113,22 @@
         </div>
         <div class="search bar">
             <input class="Email" type="" placeholder="Enter your Email">
-            <a class="contact" href="#"> Contact Me</a>
+           <button class="contact"><a  href="#"> Contact Me</a></button> 
         </div>
     </div>
     <div class="social">
-        <a href="https://www.instagram.com/usman_munir06?igsh=MWlscjZmam8wbDdrMg==" target="_blank"> <img src="images/instagram (1).png" alt="" style="width: 25px; height: 20px;"></a>
+        <a href="https://www.instagram.com/usman_munir06?igsh=MWlscjZmam8wbDdrMg==" target="_blank"> <img src="images/instagram.png" alt="" style="width: 20px; height: 20px;"></a>
         <a href="https://www.linkedin.com/in/usman-munir-81b2a232b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><img src="images/linkedin.png" alt=""style="width="25px height="20px"></a>
-        <a href="https://www.facebook.com/share/1CEfS8nzC9/" target="_blank"><img src="images/facebook (1).png" alt=""style="width="25px height="20px"></a>
+        <a href="https://www.facebook.com/share/1CEfS8nzC9/" target="_blank"><img src="images/facebook.png" alt=""style="width="25px height="20px"></a>
     </div>
     <div>
         <ul class="foot-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Testimonials</a></li>
-            <li><a href="#">Contact</a></li>
+            <li class="no1"><a href="#">Home</a></li>
+            <li class="no2"><a href="#">About Me</a></li>
+            <li class="no3"><a href="#">Services</a></li>
+            <li class="no4"><a href="#">Projects</a></li>
+            <li class="no5"><a href="#">Testimonials</a></li>
+            <li class="no6"><a href="#">Contact</a></li>
         </ul>
     </div>
     <footer class="footer">
