--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
            <button class="contact"><a  href="#"> Contact Me</a></button> 
         </div>
     </div>
-    <div class="social">
+    <!-- <div class="social">
         <a href="https://www.instagram.com/usman_munir06?igsh=MWlscjZmam8wbDdrMg==" target="_blank"> <img src="images/instagram.png" alt="" style="width: 20px; height: 20px;"></a>
         <a href="https://www.linkedin.com/in/usman-munir-81b2a232b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><img src="images/linkedin.png" alt=""style="width="25px height="20px"></a>
         <a href="https://www.facebook.com/share/1CEfS8nzC9/" target="_blank"><img src="images/facebook.png" alt=""style="width="25px height="20px"></a>
@@ -130,8 +130,21 @@
             <li class="no5"><a href="#">Testimonials</a></li>
             <li class="no6"><a href="#">Contact</a></li>
         </ul>
-    </div>
+    </div> -->
     <footer class="footer">
+        <div class="social">
+            <a href="https://www.instagram.com/usman_munir06?igsh=MWlscjZmam8wbDdrMg==" target="_blank"> <img src="images/instagram.png" alt="" style="width: 20px; height: 20px;"></a>
+            <a href="https://www.linkedin.com/in/usman-munir-81b2a232b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><img src="images/linkedin.png" alt=""style="width="25px height="20px"></a>
+            <a href="https://www.facebook.com/share/1CEfS8nzC9/" target="_blank"><img src="images/facebook.png" alt=""style="width="25px height="20px"></a>
+        </div> 
+          <ul class="foot-links">
+            <li class="no1"><a href="#">Home</a></li>
+            <li class="no2"><a href="#">About Me</a></li>
+            <li class="no3"><a href="#">Services</a></li>
+            <li class="no4"><a href="#">Projects</a></li>
+            <li class="no5"><a href="#">Testimonials</a></li>
+            <li class="no6"><a href="#">Contact</a></li>
+        </ul>
         <p>© 2023 Usman Munir. All rights reserved.</p>
     </footer>
    
