--- a/index.html
+++ b/index.html
@@ -49,10 +49,14 @@
         <div class="detail">
             <h2 class="about-me">About me</h2>
             <p class="para">I am a web developer with a passion of creating dynamic and responsive websites. <br>I have experience in HTML,CSS and various frameworks. <br>My work is to build a user-friendly and <br> effcient websites applications that meet the needs of clients and users alike</p>
-            <h3>Web Design</h3>
-            <h3>App Design</h3>
-            <h3>UX</h3>
-            <h3>Graphic Design</h3>
+            <h3 style="margin-bottom: 7px; margin-top: -5px;">Web Design</h3>
+            <input style="width: 350px;" type="range" min="1" max="100" value="50">
+            <h3 style="margin-bottom: 7px; margin-top: -5px;">App Design</h3>
+            <input style="width: 350px;" type="range" min="1" max="100" value="50">
+            <h3 style="margin-bottom: 7px; margin-top: -5px;">UX</h3>
+            <input style="width: 350px;" type="range" min="1" max="100" value="50">
+            <h3 style="margin-bottom: 7px; margin-top: -5px;">Graphic Design</h3>
+            <input style="width: 350px;" type="range" min="1" max="100" value="50">
         </div>
     </div>
     <div class="service">
@@ -147,6 +151,7 @@
         </ul>
         <p>© 2023 Usman Munir. All rights reserved.</p>
     </footer>
+    
    
 </body>
 </html>
