--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h2 class="about-me">About me</h2>
             <p class="para">I am a web developer with a passion of creating dynamic and responsive websites. <br>I have experience in HTML,CSS and various frameworks. <br>My work is to build a user-friendly and <br> effcient websites applications that meet the needs of clients and users alike</p>
             <h3 style="margin-bottom: 7px; margin-top: -5px;">Web Design</h3>
-            <input style="width: 350px;" type="range" min="1" max="100" value="50">
+            <input style="width: 350px; color: #ffa500;" type="range" min="1" max="100" value="50">
             <h3 style="margin-bottom: 7px; margin-top: -5px;">App Design</h3>
             <input style="width: 350px;" type="range" min="1" max="100" value="50">
             <h3 style="margin-bottom: 7px; margin-top: -5px;">UX</h3>
