heading improvement and range thumb setting done

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <p>HI I am</p>
             <p style="color: #ffa500;;">USMAN MUNIR</p>
             <h1 class="web">Web <br>
-                developer
+                Developer
             </h1>
             <p>My name is Usman Munir.I,m a web developer.I,m a student of The University of Lahore. <br>I,m studying BSCS.My age is 21.If you like my work then hire mefor your make work easier</p>
-            <button class="hire"><a href="#"></a>Hire me</button>
+            <button class="hire"><a href="#"></a>Hire Me</button>
         </div>
         <div class="profile">
             <img src="images/profile.pic.jpg" alt="" width: 500px; height= 375px >
@@ -47,15 +47,15 @@
             <img src="images/profile.pic.jpg" alt="">
         </div>
         <div class="detail">
-            <h2 class="about-me">About me</h2>
-            <p class="para">I am a web developer with a passion of creating dynamic and responsive websites. <br>I have experience in HTML,CSS and various frameworks. <br>My work is to build a user-friendly and <br> effcient websites applications that meet the needs of clients and users alike</p>
-            <h3 style="margin-bottom: 7px; margin-top: -5px;">Web Design</h3>
+            <h2 class="about-me">About Me</h2>
+            <p class="para">I am a web eveloper with a passion of creating dynamic and responsive websites. <br>I have experience in HTML,CSS and various frameworks. <br>My work is to build a user-friendly and <br> effcient websites applications that meet the needs of clients and users alike</p>
+            <h3 style="margin-bottom: 7px; margin-top: -2px;">Web Design</h3>
             <input style="width: 350px; color: #ffa500;" type="range" min="1" max="100" value="50">
-            <h3 style="margin-bottom: 7px; margin-top: -5px;">App Design</h3>
+            <h3 style="margin-bottom: 7px; margin-top: 5px;">App Design</h3>
             <input style="width: 350px;" type="range" min="1" max="100" value="50">
-            <h3 style="margin-bottom: 7px; margin-top: -5px;">UX</h3>
+            <h3 style="margin-bottom: 7px; margin-top: 5px;">UX</h3>
             <input style="width: 350px;" type="range" min="1" max="100" value="50">
-            <h3 style="margin-bottom: 7px; margin-top: -5px;">Graphic Design</h3>
+            <h3 style="margin-bottom: 7px; margin-top: 5px;">Graphic Design</h3>
             <input style="width: 350px;" type="range" min="1" max="100" value="50">
         </div>
     </div>
